# release_script

./: README.md  pyproject.toml
src/release/: release_version.py
